feat: allow the agent namespace to be customized
This fixes a customer issue where the agent namespace was hardcoded to {{.Release.Namespace}}-agents, even if `.Values.agent.namespace.enabled` was set to false. This change allows the agent namespace to be customized by setting `.Values.agent.namespace.name`.

## Tested templates:

### TFE with a pre-existing namespace called testing-ns:

```bash
helm template tfe . --set agents.namespace.enabled=false --set agents.namespace.name=testing-ns
```

### TFE with a new namespace called testing-ns:

```bash
helm template tfe . --set agents.namespace.enabled=true --set agents.namespace.name=testing-ns
```

### TFE with the default namespace name:

```bash
helm template tfe . --set agents.namespace.enabled=true
```

--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -10,7 +10,7 @@ metadata:
 data:
   {{- include "helpers.list-env-variables" . | indent 2 }}
   TFE_RUN_PIPELINE_DRIVER: kubernetes
-  TFE_RUN_PIPELINE_KUBERNETES_NAMESPACE: {{ .Release.Namespace }}-agents
+  TFE_RUN_PIPELINE_KUBERNETES_NAMESPACE: {{ include "helpers.agent-namespace" . }}
   {{- if or .Values.agentWorkerPodTemplate .Values.openshift.enabled }}
   TFE_RUN_PIPELINE_KUBERNETES_POD_TEMPLATE: {{ include "k8s.addSecurityContext" . }}
   {{- end }}
