--- a/templates/agents-namespace.yaml
+++ b/templates/agents-namespace.yaml
@@ -8,7 +8,7 @@ SPDX-License-Identifier: MPL-2.0
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Release.Namespace }}-agents
+  name: {{ include "helpers.agent-namespace" . }}
   {{- with .Values.agents.namespace.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
