exemplify upcoming TFE_REDIS_SIDEKIQ_* configs

--- a/env-config.yaml
+++ b/env-config.yaml
@@ -29,6 +29,10 @@
 # TFE_REDIS_USER: ""
 # TFE_REDIS_HOST: ""
 # TFE_REDIS_USE_AUTH: ""
+# TFE_REDIS_SIDEKIQ_USE_TLS: ""
+# TFE_REDIS_SIDEKIQ_USER: ""
+# TFE_REDIS_SIDEKIQ_HOST: ""
+# TFE_REDIS_SIDEKIQ_USE_AUTH: ""
 # TFE_TLS_CIPHERS: ""
 # TFE_VAULT_ADDRESS: ""
 # TFE_VAULT_NAMESPACE: ""
