--- a/env-secrets.yaml
+++ b/env-secrets.yaml
@@ -8,4 +8,5 @@
 # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
 # TFE_VAULT_SECRET_ID: ""
 # TFE_REDIS_PASSWORD: ""
+# TFE_REDIS_SIDEKIQ_PASSWORD: ""
 # TFE_LICENSE: ""
