--- a/values.yaml
+++ b/values.yaml
@@ -216,6 +216,7 @@ env:
     # TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY: ""
     # TFE_VAULT_SECRET_ID: ""
     # TFE_REDIS_PASSWORD: ""
+    # TFE_REDIS_SIDEKIQ_PASSWORD: ""
     # TFE_LICENSE: ""
   variables: {}
     # TFE_HOSTNAME: ""
@@ -246,6 +247,10 @@ env:
     # TFE_REDIS_USER: ""
     # TFE_REDIS_HOST: ""
     # TFE_REDIS_USE_AUTH: ""
+    # TFE_REDIS_SIDEKIQ_USE_TLS: ""
+    # TFE_REDIS_SIDEKIQ_USER: ""
+    # TFE_REDIS_SIDEKIQ_HOST: ""
+    # TFE_REDIS_SIDEKIQ_USE_AUTH: ""
     # TFE_TLS_CIPHERS: ""
     # TFE_VAULT_ADDRESS: ""
     # TFE_VAULT_NAMESPACE: ""
