--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -107,9 +107,9 @@ spec:
         {{- end }}
         readinessProbe:
           httpGet:
-            path: {{ default /_health_check .values.tfe.readinessProbePath }}
+            path: {{ default "/_health_check" .values.tfe.readinessProbePath }}
             port: {{ .Values.tfe.privateHttpPort }}
-            scheme: {{ default HTTP .values.tfe.readinessProbeScheme }}
+            scheme: {{ default "HTTP" .values.tfe.readinessProbeScheme }}
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         volumeMounts:
