Fix: Install kubeconform first

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,7 +21,14 @@ jobs:
         run: |
           helm lint .
 
-      # Step 4: Render and validate Helm templates
+      # Step 4: Install kubeconform
+      - name: Install kubeconform
+        run: |
+          curl -LO https://github.com/yannh/kubeconform/releases/latest/download/kubeconform-linux-amd64.tar.gz
+          tar -xzf kubeconform-linux-amd64.tar.gz
+          sudo mv kubeconform /usr/local/bin/
+
+      # Step 5: Render and validate Helm templates
       - name: Validate rendered Helm templates
         run: |
           helm template . | kubeconform --strict
