--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -24,6 +24,6 @@ spec:
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
       targetPort: {{ .Values.tfe.privateHttpsPort }}
-      appProtocol: https
+      appProtocol: tcp
   selector:
     app: terraform-enterprise
