allow specifying extra volumes and mounts
Usecase: A customer has CA certificates required for TFE in an externally-managed secret. The current `tls` block doesn't give enough flexibility to mount a (or multiple) secrets as CA certificates.

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -59,6 +59,9 @@ spec:
           secret:
             secretName: terraform-enterprise-ca-certificates
         {{- end }}
+        {{- with .Values.extraVolumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -123,6 +126,9 @@ spec:
           - name: ca-certificates
             mountPath: {{ include "cacert.path" . }}
             subPath: {{ .Values.tls.caCertFileName }}
+          {{- end }}
+          {{- with .Values.extraVolumeMounts }}
+          {{- toYaml . | nindent 10 }}
           {{- end }}
         ports:
         - containerPort: {{ .Values.tfe.privateHttpPort }}
