--- a/templates/secretproviderclass.yaml
+++ b/templates/secretproviderclass.yaml
@@ -15,12 +15,12 @@ metadata:
 spec:
   provider: vault
   parameters:
-    vaultRoleName: {{ .Values.csi.vaultRole }}
-    vaultAddress: {{ .Values.csi.vaultAddress }}
+    roleName: "{{ .Values.csi.vaultRole }}"
+    vaultAddress: "{{ .Values.csi.vaultAddress }}"
     objects: |
     {{- range .Values.csi.secrets }}
       - objectName: "{{ .objectName }}"
-        secretPath: "{{ .secretName }}"
+        secretPath: "{{ .secretPath }}"
         secretKey: "{{ .secretKey }}"
     {{- end }}
   {{- if .Values.csi.secretObjects }}
