--- a/values.yaml
+++ b/values.yaml
@@ -298,7 +298,7 @@ agents:
     annotations: {}
     labels: {}
 
-# Extra volumes to add to the deployment's pod. 
+# Extra volumes to add to the deployment's pod.
 # Reference: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#volumes
 # Usecases:
 ## mount external secrets, such as certificates from cert-manager
@@ -334,20 +334,20 @@ pdb:
 
 # CSI driver settings for Vault provider
 csi:
-  enabled: false
+  enabled: true
   annotations: {}
   labels: {}
-  secretProviderClass: terraform-enterprise-secrets
-  vaultRole: terraform-enterprise-role
-  vaultAddress: http://vault.vault.svc.cluster.local
-  mountPath: /mnt/secrets-store
+  secretProviderClass: terraform-enterprise-vault-secrets
+  vaultRole: ""
+  vaultAddress: "" # Example: http://vault.vault-namespace.svc.cluster.local:8200
+  mountPath: "" # Example: /mnt/secrets-store
   secrets:
-    - secretName: "kv/data/terraform-enterprise"
-      secretKey: test.crt"
-      objectName: "test.crt"
+    - secretPath: "" # Example: secret/data/db
+      secretKey: ""
+      objectName: ""
   secretObjects:
   - data:
-    - key: username
-      objectName: foo1
-    secretName: foosecret
+    - key: ""
+      objectName: ""
+    secretName: ""
     type: Opaque
