Document vault CSI provider

--- a/values.yaml
+++ b/values.yaml
@@ -342,12 +342,20 @@ csi:
   vaultAddress: "" # Example: http://vault.vault-namespace.svc.cluster.local:8200
   mountPath: "" # Example: /mnt/secrets-store
   secrets:
-    - secretPath: "" # Example: secret/data/db
+    # The path to the secret defined in Vault. Example: secret/data/db
+    - secretPath: ""
+      # The key of the secret defined in Vault.
       secretKey: ""
+      # A name for the secret
       objectName: ""
+  # If this is added, secrets will be synced to Kubernetes secrets.
   secretObjects:
   - data:
+    # secret key from secrets section
     - key: ""
+      # Object name from secrets section
       objectName: ""
+    # Name of the Kubernetes secret
     secretName: ""
-    type: Opaque
+    # Type of the Kubernetes secret. Example: Opaque
+    type: ""
