--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -15,6 +15,20 @@ data:
   tls.key: {{ .Values.tls.keyData }}
 {{- end }}
 
+{{- if and .Values.tlsSecondary.certData .Values.tlsSecondary.keyData }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.tlsSecondary.certificateSecret }}
+  namespace: {{ .Release.Namespace }}
+type: kubernetes.io/tls
+data:
+  tls.crt: {{ .Values.tlsSecondary.certData }}
+  tls.key: {{ .Values.tlsSecondary.keyData }}
+{{- end }}
+
+
 {{- if .Values.tls.caCertData }}
 ---
 apiVersion: v1
