added the config-map to only add the paths when secondary configured

--- a/env-config.yaml
+++ b/env-config.yaml
@@ -40,3 +40,8 @@
 # TFE_VAULT_ROLE_ID: ""
 # TFE_IACT_SUBNETS: ""
 # TFE_IACT_TIME_LIMIT: ""
+# TFE_HOSTNAME_SECONDARY: ""
+# TFE_OIDC_HOSTNAME_CHOICE: ""
+# TFE_VCS_HOSTNAME_CHOICE: ""
+# TFE_SAML_HOSTNAME_CHOICE: ""
+# TFE_RUN_TASK_HOSTNAME_CHOICE: ""
