--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -20,7 +20,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.tlsSecondary.certificateSecret }}
+  name: {{ .Values.tlsSecondary.certificateSecret | default "terraform-enterprise-certificates-secondary" }}
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/tls
 data:
