--- a/values.yaml
+++ b/values.yaml
@@ -67,7 +67,7 @@ tls:
 
 
 tlsSecondary:
-  certificateSecret: terraform-enterprise-certificates-secondary
+  # certificateSecret: terraform-enterprise-certificates-secondary
   certMountPath: /etc/ssl/private/terraform-enterprise-secondary/cert.pem
   keyMountPath: /etc/ssl/private/terraform-enterprise-secondary/key.pem
   # certData:
