--- a/values.yaml
+++ b/values.yaml
@@ -265,6 +265,11 @@ agentWorkerPodTemplate: {}
   # spec:
   #   containers: []
   #   nodeSelector: {}
+  
+# Configuration for running this Helm chart on Red Hat OpenShift platform.
+openshift:
+  # If true, the Helm chart will create necessary configuration for running its components on OpenShift.
+  enabled: false
 
 env:
   # configMapRefs:
