--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -28,6 +28,18 @@ data:
   tls.key: {{ .Values.tlsSecondary.keyData }}
 {{- end }}
 
+{{- if and .Values.tlsRedis.certData .Values.tlsRedis.keyData .Values.tlsRedis.caCertData }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.tlsRedis.certificateSecret | default "terraform-enterprise-certificates-redis" }}
+  namespace: {{ .Release.Namespace }}
+type: kubernetes.io/tls
+data:
+  tls.crt: {{ .Values.tlsRedis.certData }}
+  tls.key: {{ .Values.tlsRedis.keyData }}
+  tls.ca: {{ .Values.tlsRedis.caCertData }}
+{{- end }}
 
 {{- if .Values.tls.caCertData }}
 ---
