--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -30,6 +30,11 @@ data:
   {{- if .Values.tls.caCertData }}
   TFE_TLS_CA_BUNDLE_FILE: {{ include "cacert.path" . }}
   {{- end }}
+  {{- if and .Values.tlsRedis.certData .Values.tlsRedis.keyData .Values.tlsRedis.caCertData }}
+  TFE_REDIS_CLIENT_CERT_PATH: "{{ .Values.tlsRedis.certMountPath }}"
+  TFE_REDIS_CLIENT_KEY_PATH: "{{ .Values.tlsRedis.keyMountPath }}"
+  TFE_REDIS_CA_CERT_PATH: "{{ .Values.tlsRedis.caCertMountPath }}"
+  {{- end }}
   {{- if .Values.tfe.metrics.enable }}
   TFE_METRICS_ENABLE: "{{ .Values.tfe.metrics.enable }}"
   TFE_METRICS_HTTP_PORT: "{{ .Values.tfe.metrics.httpPort }}"
