--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -41,6 +41,19 @@ data:
   tls.ca: {{ .Values.tlsRedis.caCertData }}
 {{- end }}
 
+{{- if and .Values.tlsRedisSidekiq.certData .Values.tlsRedisSidekiq.keyData .Values.tlsRedisSidekiq.caCertData }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.tlsRedisSidekiq.certificateSecret | default "terraform-enterprise-certificates-redis-sidekiq" }}
+  namespace: {{ .Release.Namespace }}
+type: kubernetes.io/tls
+data:
+  tls.crt: {{ .Values.tlsRedisSidekiq.certData }}
+  tls.key: {{ .Values.tlsRedisSidekiq.keyData }}
+  tls.ca: {{ .Values.tlsRedisSidekiq.caCertData }}
+{{- end }}
+
 {{- if .Values.tls.caCertData }}
 ---
 apiVersion: v1
