Add support for passing in additional labels and annotations to the deployment object

--- a/values.yaml
+++ b/values.yaml
@@ -24,6 +24,10 @@ serviceAccount:
   annotations: {}
   labels: {}
 
+deployment:
+  # Configure deployment annotations
+  annotations: {}
+  labels: {}
 pod:
 # Configure pod annotations
   annotations: {}
