--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -10,6 +10,13 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     app: terraform-enterprise
+    {{- if .Values.deployment.labels }}
+    {{- toYaml .Values.deployment.labels | nindent 4 }}
+    {{- end }}
+  {{- if .Values.deployment.annotations }}
+  annotations:
+    {{- toYaml .Values.deployment.annotations | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
