updated input desc

--- a/.github/workflows/create-or-update-tag.yml
+++ b/.github/workflows/create-or-update-tag.yml
@@ -10,10 +10,10 @@ on:
           description: 'Provide tag to Create or Update (e.g., v1.6.6)'
           required: true
       release_branch:
-          description: 'Provide branch to create tag on (e.g., release/1.1.x)'
+          description: 'Provide release branch to create tag on (e.g., release/1.1.x), leave empty if full SHA is provided'
           required: false
       sha_value:
-          description: 'For Advanced Users: Provide Full SHA value to create or update tag'
+          description: 'For Advanced Users: Provide Full SHA value to create or update tag, leave empty if release branch is provided'
           required: false
           default: ''
 
