Set Minio image tag to RELEASE.2025-10-15T17-29-55Z in values.yaml

--- a/docs/example/terraform-enterprise-prereqs/values.yaml
+++ b/docs/example/terraform-enterprise-prereqs/values.yaml
@@ -90,6 +90,8 @@ postgresql:
     database: tfe
 
 minio:
+  image:
+    tag: RELEASE.2025-10-15T17-29-55Z
   rootUser: tfeclusteradmin
   rootPassword: "Terraform-Enterprise!"
   replicas: 3
